--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <li>thing 2</li>
     </ol>
 
+    <ul>
+        <li>thing 1</li>
+        <li>thing 3</li>
+        <li>thing 2</li>
+    </ul>
+
     <img src="meme.jpg" alt="meme"
 </body>
 </html>
